Se cambia el nombre de clase Pixel a Colour

--- a/galoreware.drawing.csproj
+++ b/galoreware.drawing.csproj
@@ -42,7 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="cs\ByteMap.cs" />
-    <Compile Include="cs\Pixel.cs" />
+    <Compile Include="cs\Colour.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
