--- a/galoreware.drawing.csproj
+++ b/galoreware.drawing.csproj
@@ -41,8 +41,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="cs\Area.cs" />
     <Compile Include="cs\ByteMap.cs" />
     <Compile Include="cs\Colour.cs" />
+    <Compile Include="cs\Point2D.cs" />
+    <Compile Include="cs\Shape.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
