--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "galoreware.io"]
 	path = galoreware.io
-	url = https://github.com/galoreware/io/
+	url = https://github.com/galoreware/io.git
